# fiap-ml-challenge-03

./: .dockerignore  .gitignore  Dockerfile  README.md  commit-and-push.ps1  entrega.txt  env.example  pre-apresentacao-checklist.ps1  pyproject.toml  requirements.txt  visual_guide.md
api/: main.py
cloud_functions/: README.md  firebase.json
cloud_functions/functions/: index.js  package.json
common/: __init__.py  config.py  schemas.py
dash/: app.py
data/: README.md  firebase_sync.py  firestore_direct.py  firestore_realtime.py  firestore_scheduler.py  simulate.py
examples/: test_firebase_integration.py
models/: __init__.py  train.py
pipelines/: __init__.py  features.py
